tests/invalid-syntax/57551_var_missing_initializer/var_missing_initializer.mag
-- Author: 57551, Eduardo Proença

-- Variable declaration is missing the initializer value after `=`

fun main (_) : Unit -> Unit =
    var x : Int = ;
    print(x)